update swg soc
